Tests working for Templated Linked List class